# idea-fork

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  workflow.md
api/: .dockerignore  alembic.ini  pyproject.toml
api-server/: .env.example  Dockerfile  alembic.ini  docker-compose.dev.yml  pyproject.toml
api-server/alembic/versions/: 89cca202844c_initial_schema.py
api-server/src/: main.py
api-server/src/categories/: __init__.py  models.py
api-server/src/core/: config.py  exceptions.py  redis.py
api-server/src/db/: SCHEMA_DESIGN.md  schema-dbdiagram.sql  schema.dbml  schema.sql
api-server/src/generation/: models.py  router.py
api-server/src/ideas/: __init__.py  models.py  schemas.py  service.py
api-server/src/users/: __init__.py
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_add_google_oauth_fields.py
api/migrations/: 001_initial_schema.sql  001_initial_schema_rollback.sql
api/src/: main.py
api/src/auth/: __init__.py  router.py  schemas.py  service.py
api/src/categories/: models.py  router.py  schemas.py  service.py
api/src/core/: __init__.py  config.py  database.py  deps.py  security.py
api/src/generation/: __init__.py  models.py  router.py  schemas.py  service.py
api/src/generation/models/: __init__.py  state.py
api/src/generation/pipeline/: __init__.py  config.py  graph.py  nodes.py  repository.py
api/src/generation/prompts/: __init__.py  templates.py
api/src/health/: __init__.py  router.py  schemas.py
api/src/ideas/: models.py  router.py  schemas.py  service.py
api/src/taxonomies/: __init__.py  models.py  router.py  schemas.py  service.py
api/src/users/: models.py
services/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 61cd45beede7_product_slug_unique_per_source.py  9dacea10fdae_add_rss_to_post_source_check.py  a31dbf9701cd_initial_schema.py  b4e2a7c1f3d0_add_product_tag.py  c3e82ceda34a_expand_product_source_check.py  c7f3a2b8d910_expand_post_type_check.py  d5a1b7c9e234_rename_complaint_count_to_signal_count.py  e6b2c8d0f345_cluster_status_default_active.py  f7a3b8d1e456_add_cluster_trend_keywords.py
services/api/src/app/: main.py  pipeline_cli.py
services/api/src/domain/brief/: errors.py  models.py  ports.py  service.py
services/api/src/domain/pipeline/: models.py  ports.py  service.py
services/api/src/domain/post/: errors.py  models.py  ports.py  service.py
services/api/src/domain/product/: errors.py  models.py  ports.py  service.py
services/api/src/domain/rating/: errors.py  models.py  ports.py  service.py
services/api/src/domain/tag/: models.py  ports.py  service.py
services/api/src/inbound/http/: dependencies.py  errors.py  limiter.py  response.py
services/api/src/outbound/appstore/: client.py
services/api/src/outbound/llm/: client.py
services/api/src/outbound/playstore/: client.py
services/api/src/outbound/postgres/: brief_repository.py  database.py  mapper.py  models.py  pipeline_repository.py  post_repository.py  product_repository.py  (+2 more)
services/api/src/shared/: config.py  pagination.py  slugify.py
services/api/tests/: conftest.py  test_alembic_env.py  test_alembic_migration_initial.py  test_app_main.py  test_app_main_extended.py  test_health.py  test_pipeline_cli.py
services/api/tests/domain/: test_brief_service.py  test_pipeline_models.py  test_pipeline_service.py  test_post_service.py  test_product_service.py  test_rating_service.py  test_tag_service.py
services/api/tests/inbound/: test_admin_router.py  test_brief_router.py  test_dependencies.py  test_pipeline_router.py  test_post_router.py  test_product_router.py  test_rating_router.py  test_tag_router.py
services/api/tests/outbound/: test_appstore_client.py  test_brief_repository.py  test_database.py  test_llm_client.py  test_llm_client_extended.py  test_mapper.py  test_models.py  test_pipeline_repository.py  test_playstore_client.py  test_post_repository.py  test_product_repository.py  test_producthunt_client.py  test_rating_repository.py  test_reddit_client.py  test_rss_client.py  test_tag_repository.py  test_trends_client.py
services/api/tests/shared/: test_config.py  test_config_extended.py  test_errors.py  test_pagination.py  test_pagination_extended.py  test_slugify.py
worker/: .env.example  pyproject.toml
worker/src/: __init__.py  main.py
worker/src/core/: __init__.py  config.py  logging.py
worker/src/scheduler/: __init__.py  config.py  jobs.py
worker/src/tasks/: __init__.py  idea_generation.py
(+581 files in other folders)
