[project]
name = "idea-fork-worker"
version = "0.1.0"
description = "RQ Worker for scheduled daily idea generation"
requires-python = ">=3.11"
dependencies = [
    # RQ and Redis
    "rq>=1.16.0",
    "rq-scheduler>=0.13.0",
    "redis>=5.0.0",
    # HTTP client for API calls
    "httpx>=0.27.0",
    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
