[project]
name = "idea-fork-api"
version = "0.1.0"
description = "idea-fork API server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "slowapi>=0.1.9",
    "httpx>=0.28.0",
    "google-genai>=1.0.0",
    "tenacity>=9.0.0",
    "alembic>=1.15.0",
    "psycopg2-binary>=2.9.0",
    "scikit-learn>=1.5.0",
    "numpy>=2.0.0",
    "feedparser>=6.0.0",
    "pytrends>=4.9.0",
    "google-play-scraper>=1.2.0",
    "sentry-sdk[fastapi]>=2.19.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
